# pdfeditoroffline

./: .gitignore  README.md  dev-start.bat  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  crypto.py  db.py  main.py  pdf_ops.py  purge.py  routes.py
backend/tests/: conftest.py  test_api.py  test_pdf_ops.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  Editor.tsx  api.ts  styles.css
